data/derived/comb/progs/unify/prog5961.ml.out
Characters 144-145:
  let seen' = if not (List.mem seen h) then seen@[h] else seen in
                                                  ^
Error: This expression has type 'a list list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list list
